# dremio-iceberg-finalytics

./: .gitignore  docker-compose-original.yml  docker-compose.yml  readme.md
spark-jupyter-workspace/finalytics_spark/: pyproject.toml
spark-jupyter-workspace/finalytics_spark/.ipynb_checkpoints/: pyproject-checkpoint.toml
spark-jupyter-workspace/finalytics_spark/src/finalytics_spark/: __main__.py  cfg_connections.yaml  cfg_schemas.yaml  cfg_table_schemas.yaml  config.yaml  config_connections.yaml  job.py  lab_database_manager.ipynb  lab_finalytics_database.ipynb  lab_iceberg_manager.ipynb  lab_iceberg_pg_ingestion.ipynb  lab_load_db.ipynb  lab_pg_database_manager.ipynb  lab_raw_yahoo.ipynb  lab_raw_yahoo_iceberg_ingestion.ipynb  lab_raw_yahoo_ingestion copy.ipynb  lab_raw_yahoo_ingestion.ipynb  lab_raw_yahooquery.ipynb  lab_raw_yfiannce_ingestion-Copy1.ipynb  lab_raw_yfiannce_ingestion.ipynb  lab_registered_tables.ipynb  lab_spark.ipynb  lab_table_manager.ipynb  lab_test_main.ipynb  lab_test_raw_yfinance.ipynb  lab_test_spark.ipynb  raw_yfinance_ingestion.py  registered_table_schemas.yaml  stage_ingestion.py  table_config.yaml  table_manager.ipynb  test.ipynb  x.py  xx.py  xx__main__.py  zone_raw_yfinance.py  zz__main__-Copy1.py  zz_get_yahoo_data.py  zz_keep_lab_raw_yfiannce_ingestion.ipynb  zz_keep_lab_registered_tables-Copy1.ipynb  (+5 more)
spark-jupyter-workspace/finalytics_spark/src/finalytics_spark/.ipynb_checkpoints/: __main__-checkpoint.py  cfg_connections-checkpoint.yaml  cfg_schemas-checkpoint.yaml  cfg_table_schemas-checkpoint.yaml  common-checkpoint.py  (+22 more)
(+158 files in other folders)
